crates/ink/tests/ui/contract/fail/constructor-self-receiver-02.stderr
error: ink! constructors must have no `self` receiver
 --> tests/ui/contract/fail/constructor-self-receiver-02.rs:8:28
  |
8 |         pub fn constructor(&mut self) -> Self {
  |                            ^^^^^^^^^
